Fix npx execution issue by adding build step and updating bin/run.js
- Added TypeScript compilation to generate dist directory
- Fixed tsconfig.json to remove incorrect types reference
- Updated bin/run.js to properly handle MCP server execution with API key validation
- Added prepare script to ensure build happens on install
- Made bin/run.js executable

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,8 +4,8 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "mcp1",
-	"main": "src/index.ts",
+	"name": "posthog-eu-mcp",
+	"main": "dist/index.js",
 	"compatibility_date": "2025-03-10",
 	"compatibility_flags": ["nodejs_compat"],
 	"migrations": [
