--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-	"name": "remote-mcp-server-authless",
+	"name": "posthog-eu-mcp",
 	"version": "0.0.0",
-	"private": true,
+	"bin": {
+		"posthog-eu-mcp": "./bin/run.js"
+	},
+	"files": [
+		"bin",
+		"dist",
+		"src",
+		"wrangler.jsonc"
+	],
 	"scripts": {
+		"build": "tsc",
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
 		"format": "biome format --write",
 		"lint:fix": "biome lint --fix",
+		"prepare": "npm run build",
+		"prepack": "npm run build",
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/node": "^22.15.18",
-		"typescript": "^5.8.3",
-		"wrangler": "^4.14.4"
+		"typescript": "^5.8.3"
 	},
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "^1.11.1",
 		"agents": "^0.0.80",
 		"posthog-node": "^4.18.0",
-		"zod": "^3.24.4"
+		"zod": "^3.24.4",
+		"wrangler": "^4.14.4"
 	}
 }
