--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,14 @@
 		"resolveJsonModule": true,
 		"allowJs": true,
 		"checkJs": false,
-		"noEmit": true,
+		"noEmit": false,
+		"outDir": "dist",
 		"isolatedModules": true,
 		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
 		"skipLibCheck": true,
-		"types": ["node", "worker-configuration.d.ts"]
+		"types": ["node"]
 	},
 	"include": ["worker-configuration.d.ts", "src/**/*.ts"]
 }
